2004-03-08  Sven Neumann  <sven@gimp.org>
	* app/display/gimpdisplayshell.c: redone this change. We should
	probably add a GimpMessageDialog to avoid duplicating this code
	every so often.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12557 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-08  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell.c: redone this change. We should
+	probably add a GimpMessageDialog to avoid duplicating this code
+	every so often.
+
 2004-03-08  Dave Neary  <bolsh@gimp.org>
 
 	* app/display/gimpdisplayshell.c: First attempt to resolve bug 
