--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-03-08  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
