--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-08  Manish Singh  <yosh@gimp.org>
+
+	* app/plug-in/plug-in.h: Use GPid with newer glib so that we work
+	cleanly with the new API.
+
 2004-03-08  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell.c: redone this change. We should
