2004-03-08  Sven Neumann  <sven@gimp.org>
	* app/gui/convert-dialog.c (indexed_palette_select_palette): added
	a message explaining that GIMP cannot convert to a palette with
	more than 256 colors. Should actually not list palettes that don't
	match this criteria, but we'll leave that change for later (see
	bug #136574).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12563 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-08  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/convert-dialog.c (indexed_palette_select_palette): added
+	a message explaining that GIMP cannot convert to a palette with
+	more than 256 colors. Should actually not list palettes that don't
+	match this criteria, but we'll leave that change for later (see
+	bug #136574).
+
 2004-03-08  Manish Singh  <yosh@gimp.org>
 
 	* app/plug-in/plug-in.h: Use GPid with newer glib so that we work
