--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2004-03-08  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
