2004-03-08  Duarte Loreto <happyguy_pt@hotmail.com>
	* pt.po: Updated Portuguese translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12565 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-08  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2004-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
