--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: plug-ins/helpbrowser/domain.c -> plug-ins/help/domain.c
+
 2004-03-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
