Updated Serbian translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12572 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/sr.po
+++ b/po-libgimp/sr.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-04 00:14+0100\n"
-"PO-Revision-Date: 2004-02-20 06:30+0100\n"
+"POT-Creation-Date: 2004-03-09 06:06+0100\n"
+"PO-Revision-Date: 2004-03-09 06:06+0100\n"
 "Last-Translator: Дејан Матијевић <dejan@ns.sympatico.ca>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -517,8 +517,8 @@ msgid "Seed random number generator with a generated random number"
 msgstr "Семе случајно генерисаног броја са случајно генерисаним бројем"
 
 #: libgimpwidgets/gimpwidgets.c:1292
-msgid "Randomize"
-msgstr "Случајно"
+msgid "_Randomize"
+msgstr "_Случајно"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
