--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-09  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2004-03-09  Jan Morén  <jan.moren@lucs.lu.se>
  
 	* sv.po: Updated Swedish translation.
