2004-03-09  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist/general.c: fixed typo (bug #136610).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12575 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/gimpressionist/general.c: fixed typo (bug #136610).
+
+2004-03-09  Sven Neumann  <sven@gimp.org>
+
 	Finished some work that Brix started on the help system. It's
 	now possibly to use an external web-browser for context help
 	(bug #136081):
