2004-03-09  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphelp.c (gimp_help_internal): call
	procedural_db_destroy_args() with the correct nargs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12577 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-09  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp.c (gimp_help_internal): call
+	procedural_db_destroy_args() with the correct nargs.
+
 2004-03-09  Simon Budig  <simon@gimp.org>
 
 	* app/gui/preferences-dialog.c: Resurrect the "Save"-Button
