2004-03-10  Sigurd Gartmann  <sigurd-translate@brogar.org>
	* no.po: Updated Norwegian BokmÃ¥l translation with work from Runar Ingebrigtsen.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12580 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated Norwegian Bokmål translation with work from Runar Ingebrigtsen.
+
 2004-03-09  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
