2004-03-10  Vincent van Adrighem  <adrighem@gnome.org>
	* nl.po: Translation updated by Branko Collin.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12582 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-10  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Branko Collin.
+
 2004-03-10  Sigurd Gartmann  <sigurd-translate@brogar.org>
 
 	* no.po: Updated Norwegian Bokmål translation with work from Runar Ingebrigtsen.
