2004-03-10  Sven Neumann  <sven@gimp.org>
	* plug-ins/ifscompose/ifscompose.c: added missing localization for
	popup menu (bug #136706).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12584 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/ifscompose/ifscompose.c: added missing localization for
+	popup menu (bug #136706).
+
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/file-save-dialog.c (file_save_dialog_save_image): added
