--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-10  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/edit.pdb (edit_cut, edit_copy): added boolean
+	return value indicating whether the cut/copy was successful.
+	Fixes bug #136489.
+
+	* app/pdb/edit_cmds.c
+	* libgimp/gimpedit_pdb.c: regenerated.
+
 2004-03-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/ifscompose/ifscompose.c: added missing localization for
