2004-03-10  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/imap_object_popup.c: marked missing strings
	for localization (bug #136713).

	* plug-ins/imagemap/imap_stock.c (imap_stock_items): fixed bogus
	translation domain for stock item (bug #136713).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12586 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-03-10  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_object_popup.c: marked missing strings
+	for localization (bug #136713).
+
+	* plug-ins/imagemap/imap_stock.c (imap_stock_items): fixed bogus
+	translation domain for stock item (bug #136713).
+
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/edit.pdb (edit_cut, edit_copy): added boolean
