--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,5 +1,7 @@
 2004-03-10  Sven Neumann  <sven@gimp.org>
 
+	* POTFILES.in: added missing file (bug #136713).
+
 	* de.po: minor updates.
 
 2004-03-09  Sven Neumann  <sven@gimp.org>
