2004-03-10  Simon Budig  <simon@gimp.org>
	* app/widgets/gimpdnd.c: Disabled debug output and made it
	conditional with DEBUG_DND.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12590 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Simon Budig  <simon@gimp.org>
+
+	* app/widgets/gimpdnd.c: Disabled debug output and made it
+	conditional with DEBUG_DND.
+
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint-funcs/paint-funcs.h
