--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c: disabled debugging
+	output when pushing/popping the move too using <space>.
+
 2004-03-10  Simon Budig  <simon@gimp.org>
 
 	* app/base/cpu-accel.c
