--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Ville Pätsi  <drc@gimp.org>
+
+	* Makefile.am
+	* configure.in: Removed gimp.spec creation and distribution.
+
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c: disabled debugging
