2004-03-10  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_events): work around bug #136636 (Win32 only)
	and ask the current device for its modifier state in order to fill
	in the missing GDK_BUTTON*_MASK bits in GdkEventKey::state.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12594 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_events): work around bug #136636 (Win32 only)
+	and ask the current device for its modifier state in order to fill
+	in the missing GDK_BUTTON*_MASK bits in GdkEventKey::state.
+
 2004-03-10  Ville Pätsi  <drc@gimp.org>
 
 	* Makefile.am
