--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by Joao
+	S. O. Bueno <gwidion@mpc.com.br>.
+
 2004-03-10  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Branko Collin.
