--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_canvas_tool_events): added new local state
+	"gboolean force_cursor_updating" which makes the function call
+	tool_manger_cursor_update_active() even though a mouse button is
+	pressed. Fixes tool cursors in click-to-focus mode.  Reported by
+	Michael Schumacher.
+
+2004-03-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c
 	(gimp_display_shell_events): work around bug #136636 (Win32 only)
 	and ask the current device for its modifier state in order to fill
 	in the missing GDK_BUTTON*_MASK bits in GdkEventKey::state.
