--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-10  Manish Singh  <yosh@gimp.org>
+
+	* acinclude.m4: #include <string.h> for gimp-print test. Fixes
+	#136747.
+
 2004-03-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
