2004-03-10  Manish Singh  <yosh@gimp.org>
        * data/misc/gimp.applications.in: GIMP_VISIBLE_NAME doesn't exist
        anymore. Just use "The GIMP".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12599 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-10  Manish Singh  <yosh@gimp.org>
 
+	* data/misc/gimp.applications.in: GIMP_VISIBLE_NAME doesn't exist
+	anymore. Just use "The GIMP".
+
+2004-03-10  Manish Singh  <yosh@gimp.org>
+
 	* acinclude.m4: #include <string.h> for gimp-print test. Fixes
 	#136747.
 
